# MFNetsSurrogates

./: .gitignore  404.html  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: ci.yml  docs.yml
api/: index.html
docs/: api.md  index.md  tutorial.md
example_data/: mfnet_cmd.py
example_data/example_results/resultsM1/: eval.txt.evals
example_data/example_results/resultsM2/: data2_in.txt.evals  eval.txt.evals
example_data/example_results_bayes/resultsM1/: eval.txt.evals_0  eval.txt.evals_1  eval.txt.evals_10  eval.txt.evals_100  eval.txt.evals_101  eval.txt.evals_102  eval.txt.evals_103  eval.txt.evals_104  eval.txt.evals_105  eval.txt.evals_106  eval.txt.evals_107  eval.txt.evals_108  eval.txt.evals_109  eval.txt.evals_11  eval.txt.evals_110  eval.txt.evals_111  eval.txt.evals_112  eval.txt.evals_113  eval.txt.evals_114  eval.txt.evals_115  eval.txt.evals_116  eval.txt.evals_117  eval.txt.evals_118  eval.txt.evals_119  eval.txt.evals_12  eval.txt.evals_120  eval.txt.evals_121  eval.txt.evals_122  eval.txt.evals_123  eval.txt.evals_124  eval.txt.evals_125  eval.txt.evals_126  eval.txt.evals_127  eval.txt.evals_128  eval.txt.evals_129  eval.txt.evals_13  eval.txt.evals_130  eval.txt.evals_131  eval.txt.evals_132  eval.txt.evals_133  (+960 more)
example_data/example_results_bayes/resultsM2/: data2_in.txt.evals_0  data2_in.txt.evals_1  data2_in.txt.evals_10  data2_in.txt.evals_100  data2_in.txt.evals_101  data2_in.txt.evals_102  data2_in.txt.evals_103  data2_in.txt.evals_104  data2_in.txt.evals_105  data2_in.txt.evals_106  data2_in.txt.evals_107  data2_in.txt.evals_108  data2_in.txt.evals_109  data2_in.txt.evals_11  data2_in.txt.evals_110  data2_in.txt.evals_111  data2_in.txt.evals_112  data2_in.txt.evals_113  data2_in.txt.evals_114  data2_in.txt.evals_115  data2_in.txt.evals_116  data2_in.txt.evals_117  data2_in.txt.evals_118  data2_in.txt.evals_119  data2_in.txt.evals_12  data2_in.txt.evals_120  data2_in.txt.evals_121  data2_in.txt.evals_122  data2_in.txt.evals_123  data2_in.txt.evals_124  data2_in.txt.evals_125  data2_in.txt.evals_126  data2_in.txt.evals_127  data2_in.txt.evals_128  data2_in.txt.evals_129  data2_in.txt.evals_13  data2_in.txt.evals_130  data2_in.txt.evals_131  data2_in.txt.evals_132  data2_in.txt.evals_133  (+1960 more)
example_data/example_results_mo/resultsM1/: data1_in.txt.evals  eval.txt.evals
example_data/example_results_mo/resultsM2/: data2_in.txt.evals  eval.txt.evals
example_data/example_results_mo_gen/resultsM1/: data1_in.txt.evals  eval.txt.evals
example_data/example_results_mo_gen/resultsM2/: data2_in.txt.evals  eval.txt.evals
example_data/example_results_modelavg/resultsM1/: eval.txt.evals
example_data/example_results_modelavg/resultsM2/: data2_in.txt.evals  eval.txt.evals
examples/: basic_training.py  mlp_graph.py  pce_graphs_with_mlp_truth.py
mfnets_surrogates/: __init__.py  net_jax.py  net_torch.py
search/: search_index.json
tests/: test_mfnet_jax.py
tutorial/: index.html
