[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mfnets-surrogates"
description = "Multifidelity surrogate networks"
readme = "README.md"
requires-python = ">= 3.10"
license = {text = "MIT License"}
version = "0.0.1"
keywords = [
    "Networks",
    "Graph Theory",
    "Mathematics",
    "Uncertainty Quantification",
    "Multifidelity Modeling",
]
authors = [
  { name = "Alex Gorodetsky", email = "alex@alexgorodetsky.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]

dependencies = [
  "numpy>=1.24",
  "matplotlib",
  "scipy",
  "networkx",
  "jax",
  "optax",
]

[project.optional-dependencies]
torch = [
    "torch",
    "pyro-ppl",
]
extras = [
    "pydantic",
    "scikit-learn",
    "pandas",
    "matplotlib",
    "pyyaml>=6.0",
]
test = [
    "pytest",
]
# Add a new 'docs' group
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
]
dev = [
    "mfnets-surrogates[test,torch,extras,docs]",
    "ruff",
    "mypy",
]
all = ["mfnets-surrogates[dev,torch,extras]"]


[project.urls]
Documentation = "https://goroda.github.io/MFNetsSurrogates/"
Issues = "https://github.com/goroda/MFNetsSurrogates/issues"
Source = "https://github.com/goroda/MFNetsSurrogates"


[tool.setuptools]
packages = ["mfnets_surrogates"]


[tool.ruff]
include = ["mfnets_surrogates/**/*.py", "tests/**/*.py", "pyproject.toml"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
]
line-length = 88
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = [
    "F", "E", "W", "I", "B", "C4", "UP", "D",
]
ignore = [
    "D100", "D104", "D107",
]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["D103"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"


[tool.mypy]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
files = ["mfnets_surrogates/"]
plugins = "numpy.typing.mypy_plugin"

[[tool.mypy.overrides]]
module = [
    'networkx',
    'h5py',
    'matplotlib',
    'matplotlib.pyplot',
    'pydantic'
]
ignore_missing_imports = true
